--- a/template/css/style.sass
+++ b/template/css/style.sass
@@ -1,59 +1,109 @@
-@import "_bulma.sass"
 
-.task_container, .task_container_header
-  display: flex
-  border-bottom: 1px solid #eee
-  margin: 0 0 5px 0
-  padding: 5px 0 10px 0
-  div
-    display: flex
-    // margin-right: 20px
-    text-overflow: ellipsis
-    overflow: hidden
+
+
+
+$dark: #191029
+$primary: #fbadd5
+$primary-invert: #fff
+$primary-lighterer: saturate(lighten($primary, 15%),20%)
+$primary-lighter: saturate(lighten($primary, 7%),20%)
+$primary-darker: saturate(darken($primary, 30%),20%)
+$primary-darkerer: saturate(darken($primary, 50%),20%)
+$dark-lighterer: saturate(lighten($dark, 15%),20%)
+$dark-lighter: saturate(lighten($dark, 5%),20%)
+$dark-darker: saturate(darken($dark, 55%),30%)
+$link: saturate(darken($primary, 25%),20%)
+$link-hover: saturate(lighten($primary, 5%),50%)
+
+body
+  background-color: $dark
+  font-family: "Work Sans", sans-serif
+  color: $primary
+  line-height: 1.6em
+  font-size: .8em
+  font-weight: 400
+.container
+  max-width: 1000px
+  margin: 20px auto
+.table
+  display: table
+  //table-layout: fixed
+  background-color: transparent
+.table_row
+  display: table-row
+.table_col
+  display: table-cell
+  border-bottom: 1px solid $dark-lighter
+  height: 4.5em
+  padding: 5px 10px 5px 10px
+  vertical-align: middle
+  &:nth-of-type(1)
+    // min-width: 50px
+  &:nth-of-type(2)
+    min-width: 150px
+  &:nth-of-type(3)
+    width: 200px
+  &:nth-of-type(4)
+    width: auto
+  &:nth-of-type(5)
     white-space: nowrap
-    // background-color: rgba(5,5,5,.2)
-  .task_duration
-    min-width: 5%
-    margin-right: 30px
-    justify-content: flex-end
-  .task_date_container
-    min-width: 15%
-    margin-right: 15px
-  .task_project_container
-    min-width: 25%
-    margin-right: 15px
-  .task_client
-    margin-right: 15px
-  .task_description
-    min-width: 50%
-  .task_time
-    margin-right: 15px
-  .task_date
-    margin-right: 15px
+  .icon 
+    a
+      font-size: 150%
+      color: $link
+      transition: color .5s
+      &:hover
+        color: $link-hover
+        transition: color .2s
+.task_duration, .task_time, .task_project
+  font-size: 150%
+  margin-left: -.05em // pedantic nudging so the larger text lines up a little nicer with text underneath
+.cell_alignright
+  text-align: right
 .task_container_header
   font-weight: 800
 .task_container
-  &:hover
-    background-color: #f5d9ff
-    cursor: pointer
+  &:nth-of-type(n + 100)
+    display: none
+.italic
+  font-family: 'Lora', Serif
+  font-style: italic
+  color: $primary-darker
+.task_description
+  color: $primary-lighter
+.task_time, .task_project, .task_duration
+  color: $primary-lighterer
+.new_day .table_col
+  border-top: 5px solid $dark-lighterer
 
- 
-// .modal a.close-modal[class*="icon-"]
-//   top: -10px
-//   right: -10px
-//   width: 20px
-//   height: 20px
-//   color: #fff
-//   line-height: 1.25
-//   text-align: center
-//   text-decoration: none
-//   text-indent: 0
-//   background: #900
-//   border: 2px solid #fff
-//   -webkit-border-radius:  26px
-//   -moz-border-radius:     26px
-//   -o-border-radius:       26px
-//   -ms-border-radius:      26px
-//   -moz-box-shadow:    1px 1px 5px rgba(0,0,0,0.5)
-//   -webkit-box-shadow: 1px 1px 5px rgba(0,0,0,0.5)
-//   box-shadow:         1px 1px 5px rgba(0,0,0,0.5)
+.modal a.close-modal
+  top: 2.5px !important
+  right: 2.5px !important
+
+.modal_form
+  display: grid
+  grid-gap: 1em
+  grid-template-columns: 1fr 1fr 1fr
+.is-fullwidth
+  grid-column: span 3
+.field
+  padding-top: 10px
+input
+  width: calc(100% - 20px)
+  padding: 5px 10px
+  border: 1px solid $primary-lighter
+  font-size: 120%
+  border-radius: 3px
+
+button
+  background-color: $link
+  float: right
+  padding: 10px 20px
+  margin: 0
+  border: 0
+  border-radius: 3px
+  color: white
+  font-size: 120%
+  &:hover
+    background-color: darken($link,10%)
+    cursor: pointer
