Steaming along. Now just trying to stop links within task_container highlighting.

--- a/template/css/style.sass
+++ b/template/css/style.sass
@@ -23,7 +23,7 @@ body
   font-size: .8em
   font-weight: 400
 .container
-  max-width: 1000px
+  max-width: 1200px
   margin: 20px auto
 .table
   display: table
@@ -42,7 +42,7 @@ body
   &:nth-of-type(2)
     min-width: 150px
   &:nth-of-type(3)
-    width: 200px
+    min-width: 200px
   &:nth-of-type(4)
     width: auto
   &:nth-of-type(5)
@@ -64,7 +64,9 @@ body
   font-weight: 800
 .task_container
   &:nth-of-type(n + 100)
-    display: none
+    // display: none
+.highlighted
+  background-color: $dark-lighterer
 .italic
   font-family: 'Lora', Serif
   font-style: italic
