--- a/template/css/style.css
+++ b/template/css/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 .container {
-  max-width: 1000px;
+  max-width: 1200px;
   margin: 20px auto;
 }
 
@@ -32,7 +32,7 @@ body {
   min-width: 150px;
 }
 .table_col:nth-of-type(3) {
-  width: 200px;
+  min-width: 200px;
 }
 .table_col:nth-of-type(4) {
   width: auto;
@@ -63,8 +63,8 @@ body {
   font-weight: 800;
 }
 
-.task_container:nth-of-type(n + 100) {
-  display: none;
+.highlighted {
+  background-color: #37186d;
 }
 
 .italic {
