--- a/template/css/style.css
+++ b/template/css/style.css
@@ -1,3 +1,27 @@
+html {
+  box-sizing: border-box;
+  font-size: 16px;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+body, h1, h2, h3, h4, h5, h6, p, ol, ul {
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 body {
   background-color: #191029;
   font-family: "Work Sans", sans-serif;
@@ -83,6 +107,19 @@ body {
 
 .new_day .table_col {
   border-top: 5px solid #37186d;
+}
+
+#floating_bar {
+  display: none;
+  background-color: white;
+  color: #191029;
+  padding: 10px 10px;
+  font-size: 150%;
+  z-index: 2;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
 }
 
 .modal a.close-modal {
