--- a/template/css/style.sass
+++ b/template/css/style.sass
@@ -1,4 +1,24 @@
 
+// reset
+html 
+  box-sizing: border-box
+  font-size: 16px
+
+*, *:before, *:after 
+  box-sizing: inherit
+
+body, h1, h2, h3, h4, h5, h6, p, ol, ul 
+  margin: 0
+  padding: 0
+  font-weight: normal
+
+ol, ul
+  list-style: none
+
+img 
+  max-width: 100%
+  height: auto
+//
 
 
 
@@ -22,6 +42,7 @@ body
   line-height: 1.6em
   font-size: .8em
   font-weight: 400
+
 .container
   max-width: 1200px
   margin: 20px auto
@@ -78,6 +99,17 @@ body
 .new_day .table_col
   border-top: 5px solid $dark-lighterer
 
+#floating_bar
+  display: none
+  background-color: white
+  color: $dark
+  padding: 10px 10px
+  font-size: 150%
+  z-index: 2
+  position: fixed
+  top: 0
+  left: 0
+  width: 100%
 .modal a.close-modal
   top: 2.5px !important
   right: 2.5px !important
