--- a/template/css/style.css
+++ b/template/css/style.css
@@ -1,21 +1,82 @@
-html {
-  box-sizing: border-box;
-  font-size: 16px;
-}
-
-body, h1, h2, h3, h4, h5, h6, p, ol, ul {
+/*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */
+html,
+body,
+p,
+ol,
+ul,
+li,
+dl,
+dt,
+dd,
+blockquote,
+figure,
+fieldset,
+legend,
+textarea,
+pre,
+iframe,
+hr,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 0;
   padding: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: 100%;
   font-weight: normal;
 }
 
-ol, ul {
+ul {
   list-style: none;
 }
 
-img {
-  max-width: 100%;
+button,
+input,
+select,
+textarea {
+  margin: 0;
+}
+
+html {
+  box-sizing: border-box;
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+
+img,
+video {
   height: auto;
+  max-width: 100%;
+}
+
+iframe {
+  border: 0;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+td,
+th {
+  padding: 0;
+}
+td:not([align]),
+th:not([align]) {
+  text-align: inherit;
 }
 
 /** Transparent **/
@@ -31,19 +92,52 @@ img {
 /** Indigo **/
 /** Purple **/
 /** Pink **/
+html {
+  padding: 0;
+  margin: 0;
+}
+
 body {
   background-color: #fff;
-  font-family: sans-serif;
+  font-family: "Barlow", sans-serif;
   color: #2d3748;
   line-height: 1.6em;
-  font-size: 0.7em;
+  font-size: 0.85em;
   font-weight: 200;
-  margin: 0 20px;
+  padding: 0;
+}
+
+h1, h2, h3, h4, .day_header {
+  line-height: 1.6em;
+  font-weight: 200;
+  color: #805ad5;
+}
+
+h1, .day_header {
+  font-size: 300%;
+}
+
+h2 {
+  font-size: 250%;
+}
+
+h3 {
+  font-size: 200%;
+}
+
+h4 {
+  font-size: 150%;
 }
 
 .container {
   max-width: 1200px;
-  margin: 20px auto;
+  margin: 0px auto;
+}
+
+.head {
+  background-color: #edf2f7;
+  padding: 60px 0 30px 0;
+  margin: 0 0 30px 0;
 }
 
 .table {
@@ -60,7 +154,7 @@ body {
   display: table-cell;
   border-top: 1px solid #e9d8fd;
   padding: 15px 20px 13px 20px;
-  vertical-align: top;
+  vertical-align: middle;
 }
 .table_col.task_col_1 {
   width: 10%;
@@ -69,51 +163,52 @@ body {
   width: 20%;
 }
 .table_col.task_col_3 {
-  width: auto;
+  width: 50%;
 }
 .table_col.task_col_4 {
-  width: auto;
+  width: 150px;
 }
 .table_col.task_col_graph {
   width: 1%;
 }
-.table_col.task_col_graph span {
+.table_col.task_col_graph div {
   display: inline-block;
-  width: 5px;
-  height: 33px;
-  border-radius: 3px;
-  background-color: #d6bcfa;
-  margin-left: -5px;
+  width: 6px;
+  height: 46px;
+  border-radius: 5px;
+  margin-left: -10px;
+  border: 1px solid white;
 }
-.table_col.task_col_graph span.heat_0 {
+.table_col.task_col_graph div.heat_0 {
   background-color: #caefff;
 }
-.table_col.task_col_graph span.heat_1 {
+.table_col.task_col_graph div.heat_1 {
   background-color: #e9ef9c;
 }
-.table_col.task_col_graph span.heat_2 {
+.table_col.task_col_graph div.heat_2 {
   background-color: #ffc33b;
 }
-.table_col.task_col_graph span.heat_3 {
+.table_col.task_col_graph div.heat_3 {
   background-color: #ff6a38;
 }
-.table_col.task_col_graph span.heat_4 {
+.table_col.task_col_graph div.heat_4 {
   background-color: #ff1d16;
 }
 
-.new_day {
-  color: #6b46c1;
+.day_header {
   width: 100%;
   padding: 20px 0 20px 0px;
-  font-size: 300%;
-  line-height: 2em;
   border-top: 1px solid #d6bcfa;
   cursor: pointer;
 }
 
+.day_header:nth-of-type(1) {
+  border: none;
+}
+
 .task_duration, .task_project, .task_value, .task_client {
   font-size: 150%;
-  font-weight: 400;
+  font-weight: 500;
   margin-left: -0.05em;
 }
 
@@ -198,14 +293,23 @@ body {
   z-index: 2 !important;
 }
 
-.modal_form {
+.form {
   display: grid;
   grid-gap: 1em;
   grid-template-columns: 1fr 1fr 1fr;
+  grid-auto-flow: auto;
 }
 
-.is-fullwidth {
+.span-3 {
   grid-column: span 3;
+}
+
+.span-2 {
+  grid-column: span 2;
+}
+
+.span-1 {
+  grid-column: span 1;
 }
 
 .field {
@@ -213,10 +317,10 @@ body {
 }
 
 input {
-  width: calc(100% - 20px);
-  padding: 5px 10px;
+  width: 100%;
+  padding: 10px 10px;
   border: 1px solid #e2e8f0;
-  font-size: 120%;
+  font-size: 125%;
   border-radius: 3px;
 }
 
@@ -240,4 +344,16 @@ button {
 button:hover {
   background-color: #553c9a;
   cursor: pointer;
+}
+
+@media (max-width: 1024px) {
+  .table_col.task_col_1 {
+    width: 15%;
+  }
+  .table_col.task_col_2 {
+    width: 20%;
+  }
+  .table_col.task_col_3 {
+    width: 45%;
+  }
 }
