--- a/template/css/style.css
+++ b/template/css/style.css
@@ -98,19 +98,24 @@ html {
 }
 
 body {
-  background-color: #fff;
+  background-color: #edf2f7;
   font-family: "Barlow", sans-serif;
   color: #2d3748;
   line-height: 1.6em;
   font-size: 0.85em;
-  font-weight: 200;
-  padding: 0;
+  font-weight: 400;
+  display: grid;
+  grid-template-columns: 400px 1fr;
 }
 
 h1, h2, h3, h4, .day_header {
   line-height: 1.6em;
   font-weight: 200;
-  color: #805ad5;
+  color: #a0aec0;
+}
+
+ion-icon {
+  vertical-align: -10%;
 }
 
 h1, .day_header {
@@ -129,20 +134,24 @@ h4 {
   font-size: 150%;
 }
 
-.container {
-  max-width: 1200px;
-  margin: 0px auto;
+.head {
+  padding: 60px 0 30px 0;
+  margin: 0 30px 30px 30px;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  height: 100vh;
 }
 
-.head {
-  background-color: #edf2f7;
-  padding: 60px 0 30px 0;
-  margin: 0 0 30px 0;
+.sheet {
+  background-color: #fff;
+  margin: 20px 20px 0 0px;
+  padding: 20px 30px 0 30px;
+  filter: drop-shadow(0px 0px 2px #cbd5e0);
 }
 
 .table {
   display: table;
-  table-layout: fixed;
   width: 100%;
 }
 
@@ -153,31 +162,33 @@ h4 {
 .table_col {
   display: table-cell;
   border-top: 1px solid #e9d8fd;
-  padding: 15px 20px 13px 20px;
-  vertical-align: middle;
+  padding: 15px 5px 13px 5px;
+  vertical-align: top;
 }
 .table_col.task_col_1 {
-  width: 10%;
+  width: 100px;
 }
 .table_col.task_col_2 {
-  width: 20%;
+  width: 200px;
 }
 .table_col.task_col_3 {
-  width: 50%;
+  width: auto;
 }
 .table_col.task_col_4 {
-  width: 150px;
+  width: 160px;
 }
 .table_col.task_col_graph {
-  width: 1%;
+  width: 10px;
 }
 .table_col.task_col_graph div {
   display: inline-block;
-  width: 6px;
-  height: 46px;
+  width: 5px;
+  height: 50px;
   border-radius: 5px;
-  margin-left: -10px;
+  margin-left: -5px;
+  margin-right: 5px;
   border: 1px solid white;
+  vertical-align: middle;
 }
 .table_col.task_col_graph div.heat_0 {
   background-color: #caefff;
@@ -275,7 +286,7 @@ h4 {
   display: none;
   background-color: #6b46c1;
   color: #faf5ff;
-  padding: 10px 10px;
+  padding: 20px 0px;
   font-size: 150%;
   z-index: 2;
   position: fixed;
