Squashed a few bugs (maybe added a couple more), added Delete task feature

--- a/template/css/style.sass
+++ b/template/css/style.sass
@@ -247,7 +247,10 @@ button
   &:hover
     background-color: $purple-800
     cursor: pointer
-
+.is-alert
+  background-color: $red-600
+  &:hover
+    background-color: $red-700
 .toggle_filters
   text-align: right
   height: 20px
