--- a/template/css/style.css
+++ b/template/css/style.css
@@ -23,7 +23,8 @@ h4,
 h5,
 h6 {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 h1,
 h2,
@@ -32,41 +33,51 @@ h4,
 h5,
 h6 {
   font-size: 100%;
-  font-weight: normal; }
+  font-weight: normal;
+}
 
 ul {
-  list-style: none; }
+  list-style: none;
+}
 
 button,
 input,
 select,
 textarea {
-  margin: 0; }
+  margin: 0;
+}
 
 html {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 *, *::before, *::after {
-  box-sizing: inherit; }
+  box-sizing: inherit;
+}
 
 img,
 video {
   height: auto;
-  max-width: 100%; }
+  max-width: 100%;
+}
 
 iframe {
-  border: 0; }
+  border: 0;
+}
 
 table {
   border-collapse: collapse;
-  border-spacing: 0; }
+  border-spacing: 0;
+}
 
 td,
 th {
-  padding: 0; }
-  td:not([align]),
-  th:not([align]) {
-    text-align: inherit; }
+  padding: 0;
+}
+td:not([align]),
+th:not([align]) {
+  text-align: inherit;
+}
 
 /** Transparent **/
 /** Black **/
@@ -87,63 +98,77 @@ html {
   overflow: -moz-scrollbars-vertical;
   overflow-y: scroll;
   text-edge: cap alphabetic;
-  leading-trim: both; }
+  leading-trim: both;
+}
 
 body {
   background-color: #edf2f7;
   font-family: Heebo, sans-serif;
   color: #2d3748;
   line-height: 1.6em;
-  font-size: .85em;
+  font-size: 0.85em;
   font-weight: 400;
   display: grid;
-  grid-template-columns: 1fr 2fr; }
+  grid-template-columns: 1fr 2fr;
+}
 
 img {
   width: 100%;
-  height: auto; }
+  height: auto;
+}
 
 .logo {
   width: 75%;
   max-width: 300px;
   margin: 0 auto;
-  margin-bottom: 60px; }
+  margin-bottom: 60px;
+}
 
 .hide {
-  display: none; }
+  display: none;
+}
 
 h1, h2, h3, h4, .day_header {
   line-height: 1.6em;
   font-weight: 200;
-  color: #a0aec0; }
+  color: #a0aec0;
+}
 
 ion-icon {
-  vertical-align: -10%; }
+  vertical-align: -10%;
+}
 
 h1, .day_header {
-  font-size: 300%; }
+  font-size: 300%;
+}
 
 h2 {
-  font-size: 250%; }
+  font-size: 250%;
+}
 
 h3 {
   font-size: 200%;
   border-top: 1px solid #cbd5e0;
-  padding: 15px 0px 13px 0px; }
+  padding: 15px 0px 13px 0px;
+}
 
 h4 {
-  font-size: 150%; }
+  font-size: 150%;
+}
 
 .container {
-  max-width: 1200px; }
+  max-width: 1200px;
+}
 
 .day_header {
   width: 100%;
   padding: 20px 0 10px 0px;
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 .sheet > .day_header:nth-child(2) {
-  padding-top: 0; }
+  padding-top: 0;
+}
 
 .head {
   padding: 60px 0 30px 0;
@@ -151,112 +176,143 @@ h4 {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
-  height: 100vh; }
+  height: 100vh;
+}
 
 .sheet {
   background-color: #fff;
   margin: 20px 20px 0 0px;
   padding: 20px 30px 0 30px;
-  filter: drop-shadow(0px 0px 2px #cbd5e0); }
+  -webkit-filter: drop-shadow(0px 0px 2px #cbd5e0);
+          filter: drop-shadow(0px 0px 2px #cbd5e0);
+}
 
 .table {
   display: table;
-  width: 100%; }
+  width: 100%;
+}
 
 .table_row {
-  display: table-row; }
+  display: table-row;
+}
 
 .table_col {
   display: table-cell;
   border-top: 1px solid #e9d8fd;
   padding: 15px 5px 13px 5px;
-  vertical-align: top; }
-  .table_col.task_col_1 {
-    width: 100px; }
-  .table_col.task_col_2 {
-    width: 200px; }
-  .table_col.task_col_3 {
-    width: auto; }
-  .table_col.task_col_4 {
-    width: 160px; }
-  .table_col.task_col_graph {
-    width: 10px; }
-    .table_col.task_col_graph div {
-      display: inline-block;
-      width: 5px;
-      height: 50px;
-      border-radius: 5px;
-      margin-left: -5px;
-      margin-right: 5px;
-      border: 1px solid white;
-      vertical-align: middle; }
-      .table_col.task_col_graph div.heat_0 {
-        background-color: #caefff; }
-      .table_col.task_col_graph div.heat_1 {
-        background-color: #e9ef9c; }
-      .table_col.task_col_graph div.heat_2 {
-        background-color: #ffc33b; }
-      .table_col.task_col_graph div.heat_3 {
-        background-color: #ff6a38; }
-      .table_col.task_col_graph div.heat_4 {
-        background-color: #ff1d16; }
+  vertical-align: top;
+}
+.table_col.task_col_1 {
+  width: 100px;
+}
+.table_col.task_col_2 {
+  width: 200px;
+}
+.table_col.task_col_3 {
+  width: auto;
+}
+.table_col.task_col_4 {
+  width: 160px;
+}
+.table_col.task_col_graph {
+  width: 10px;
+}
+.table_col.task_col_graph div {
+  display: inline-block;
+  width: 5px;
+  height: 50px;
+  border-radius: 5px;
+  margin-left: -5px;
+  margin-right: 5px;
+  border: 1px solid white;
+  vertical-align: middle;
+}
+.table_col.task_col_graph div.heat_0 {
+  background-color: #caefff;
+}
+.table_col.task_col_graph div.heat_1 {
+  background-color: #e9ef9c;
+}
+.table_col.task_col_graph div.heat_2 {
+  background-color: #ffc33b;
+}
+.table_col.task_col_graph div.heat_3 {
+  background-color: #ff6a38;
+}
+.table_col.task_col_graph div.heat_4 {
+  background-color: #ff1d16;
+}
 
 .task_duration, .task_project, .task_value, .task_client {
   font-size: 150%;
   font-weight: 500;
-  margin-left: -.05em; }
+  margin-left: -0.05em;
+}
 
 .task_description, .task_time, .task_value_source {
-  color: #718096; }
+  color: #718096;
+}
 
 .task_client {
-  margin-right: 5px; }
+  margin-right: 5px;
+}
 
 .task_project {
   font-weight: 200;
   color: #6b46c1;
-  white-space: nowrap; }
+  white-space: nowrap;
+}
 
 .task_value_currency {
   font-size: 75%;
   vertical-align: 6%;
-  margin-right: 1px; }
+  margin-right: 1px;
+}
 
 .cell_alignright {
-  text-align: right; }
+  text-align: right;
+}
 
 .task_container:nth-of-type(n + 50) {
-  display: none; }
+  display: none;
+}
 
 .highlighted {
-  background-color: #faf5ff; }
-  .highlighted .action_icons .icon a {
-    background: #fff; }
+  background-color: #faf5ff;
+}
+.highlighted .action_icons .icon a {
+  background: #fff;
+}
 
 .action_icons {
-  text-align: right; }
+  text-align: right;
+}
 
 .icon_svg img {
   width: 15px;
   height: auto;
-  filter: invert(40%) sepia(50%) hue-rotate(226deg) saturate(900%); }
-
+  -webkit-filter: invert(40%) sepia(50%) hue-rotate(226deg) saturate(900%);
+          filter: invert(40%) sepia(50%) hue-rotate(226deg) saturate(900%);
+}
 .icon_svg a {
-  transition: color .5s, border-radius .5s, background-color .5s;
+  transition: color 0.5s, border-radius 0.5s, background-color 0.5s;
   background: #faf5ff;
   vertical-align: middle;
   align: center;
   padding: 10px 11px 7px 11px;
   border-radius: 5px;
   line-height: 1;
-  display: inline-block; }
-  .icon_svg a:hover {
-    color: #44337a;
-    background: #e9d8fd;
-    transition: color .2s, border-radius .2s, background-color .2s;
-    border-radius: 10px; }
-  .icon_svg a.modal_update {
-    padding: 9px 9px 8px 13px; }
+  display: inline-block;
+}
+.icon_svg a:hover {
+  color: #44337a;
+  background: #e9d8fd;
+  transition: color 0.2s, border-radius 0.2s, background-color 0.2s;
+  border-radius: 10px;
+}
+.icon_svg a.modal_update {
+  padding: 9px 9px 8px 13px;
+}
 
 #floating_bar {
   display: none;
@@ -269,49 +325,60 @@ h4 {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%; }
+  width: 100%;
+}
 
 .modal a.close-modal {
   top: 2.5px !important;
-  right: 2.5px !important; }
+  right: 2.5px !important;
+}
 
 .jquery-modal {
-  z-index: 2 !important; }
+  z-index: 2 !important;
+}
 
 .drp-buttons span {
-  display: none; }
-
+  display: none;
+}
 .drp-buttons button {
   width: 42%;
   padding: 2px 9px;
-  margin: 2px 9px; }
-
+  margin: 2px 9px;
+}
 .drp-buttons .cancelBtn {
-  background-color: #cbd5e0; }
+  background-color: #cbd5e0;
+}
 
 .grid-6 {
   display: grid;
   grid-gap: 10px;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-auto-flow: row; }
+  grid-auto-flow: row;
+}
 
 .span-1 {
-  grid-column: span 1; }
+  grid-column: span 1;
+}
 
 .span-2 {
-  grid-column: span 2; }
+  grid-column: span 2;
+}
 
 .span-3 {
-  grid-column: span 3; }
+  grid-column: span 3;
+}
 
 .span-4 {
-  grid-column: span 4; }
+  grid-column: span 4;
+}
 
 .span-5 {
-  grid-column: span 5; }
+  grid-column: span 5;
+}
 
 .span-6 {
-  grid-column: span 6; }
+  grid-column: span 6;
+}
 
 input {
   width: 100%;
@@ -320,13 +387,15 @@ input {
   font-size: 125%;
   border-radius: 3px;
   height: 38px;
-  vertical-align: top; }
+  vertical-align: top;
+}
 
 select {
   border: 1px solid #e2e8f0;
   font-size: 120%;
   border-radius: 3px;
-  background-color: transparent; }
+  background-color: transparent;
+}
 
 button {
   background-color: #805ad5;
@@ -338,56 +407,94 @@ button {
   border: 0;
   border-radius: 3px;
   color: white;
-  font-size: 120%; }
-  button:hover {
-    background-color: #553c9a;
-    cursor: pointer; }
+  font-size: 120%;
+}
+button:hover {
+  background-color: #553c9a;
+  cursor: pointer;
+}
+
+.is-alert {
+  background-color: #e53e3e;
+}
+.is-alert:hover {
+  background-color: #c53030;
+}
 
 .toggle_filters {
   text-align: right;
-  height: 20px; }
+  height: 20px;
+}
 
 .filters_form {
   padding: 0px 0 20px 0;
   margin: 0 0 20px 0;
-  border-bottom: 1px solid #553c9a; }
+  border-bottom: 1px solid #553c9a;
+}
 
 @media (max-width: 1024px) {
   body {
-    font-size: .7em; }
-  .span-1 {
-    grid-column: span 3; }
-  .span-2 {
-    grid-column: span 3; }
-  .span-3 {
-    grid-column: span 6; }
-  .span-4 {
-    grid-column: span 6; }
-  .span-5 {
-    grid-column: span 6; }
-  .span-6 {
-    grid-column: span 6; } }
+    font-size: 0.7em;
+  }
 
+  .span-1 {
+    grid-column: span 3;
+  }
+
+  .span-2 {
+    grid-column: span 3;
+  }
+
+  .span-3 {
+    grid-column: span 6;
+  }
+
+  .span-4 {
+    grid-column: span 6;
+  }
+
+  .span-5 {
+    grid-column: span 6;
+  }
+
+  .span-6 {
+    grid-column: span 6;
+  }
+}
 @media (max-width: 768px) {
   body {
-    grid-template-columns: 1fr; }
+    grid-template-columns: 1fr;
+  }
+
   .logo {
     max-width: 120px;
-    margin: 0 auto; }
+    margin: 0 auto;
+  }
+
   .head {
     padding: 20px 0 30px 0;
     margin: 0 30px 30px 30px;
     position: relative;
-    height: auto; }
+    height: auto;
+  }
+
   .sheet {
     margin: 20px 10px 0 10px;
     padding: 20px 20px 0 20px;
-    filter: drop-shadow(0px 0px 2px #cbd5e0); }
+    -webkit-filter: drop-shadow(0px 0px 2px #cbd5e0);
+            filter: drop-shadow(0px 0px 2px #cbd5e0);
+  }
+
   .table_col.task_col_1 {
-    width: 15%; }
+    width: 15%;
+  }
   .table_col.task_col_2 {
-    width: 20%; }
+    width: 20%;
+  }
   .table_col.task_col_3 {
-    width: 45%; }
+    width: 45%;
+  }
   .table_col .icon_svg a {
-    padding: 8px 9px 8px 9px; } }
+    padding: 8px 9px 8px 9px;
+  }
+}
