--- a/template/css/style.sass
+++ b/template/css/style.sass
@@ -4,9 +4,14 @@
 $link: $purple-300
 $link-hover: $purple-400
 
-$column-gap: 10px
-$variable-columns: true !default
-@import "bulmacolumns.sass"
+//$gap: 46px
+$column-gap: 5px
+// $variable-columns: true !default
+// $widescreen-enabled: true
+// @import "bulmacolumns.sass"
+$family-sans-serif: Heebo, sans-serif
+ 
+@import "_bulma.sass"
 
 // https://tailwindcss.com/docs/customizing-colors#default-color-palette
 html
@@ -17,12 +22,16 @@ html
   text-edge: cap alphabetic // these two don't actually work just yet.
   leading-trim: both // these two don't actually work just yet.
 body
-  background-color: $purple-100
-  font-family: Heebo, sans-serif
+  background-color: #f2f0f5
+  font-family: $family-sans-serif
   color: $gray-800
   line-height: 1.6em
-  font-size: .85em
+  font-size: .75em
   font-weight: 400
+  margin-top: 80px
+textarea, input, button, select
+  font-family: inherit // FF needs these
+  font-size: inherit
 a
   color: $link
   text-decoration: none
@@ -35,14 +44,15 @@ img
   height: auto
 
 .logo 
-  width: 80px
-  margin: 10px 20px
+  width: 120px
+  padding: 20px 20px 0 0
+  margin: 0 auto
 .hide
   display: none
 h1,h2,h3,h4, .day_header
   line-height: 1.6em
-  font-weight: 200
-  color: $pink-400
+  font-weight: 300
+  color: $gray-400
 ion-icon
   vertical-align: -10%
 
@@ -58,21 +68,28 @@ h3
 h4
   font-size: 150%
 .container
-  max-width: 1200px
+  max-width: 1400px
   margin: 0 auto
   padding: 0 20px
 .day_header
   width: 100%
-  padding: 20px 0 10px 0px
+  padding: 10px 0 10px 0px
   cursor: pointer
+  text-transform: uppercase
 .sheet > .day_header:nth-child(2)
   padding-top: 0
 .box
   background-color: $white
-  filter: drop-shadow(0px 0px 2px rgba($purple-300, .6))
+  border-radius: 2px
+  outline: 1px solid $purple-200
+.box_alt
+  background-color: lighten($purple-100, 1%)
+  outline: 1px solid $purple-200
+  border-radius: 2px
+
 .sheet, .filters_form, .quick_add_form
-  margin: 20px 0px 20px 0px
-  padding: 20px 20px 20px 20px
+  margin: 0px 0px 10px 0px
+  padding: 30px 30px 30px 30px
 
 .table
   display: table
@@ -82,7 +99,7 @@ h4
   display: table-row
 .table_col
   display: table-cell
-  border-top: 2px solid $purple-200
+  border-top: 1px solid $gray-300
   padding: 15px 5px 13px 5px
   vertical-align: top
   &.task_col_1
@@ -121,12 +138,12 @@ h4
   font-weight: 500
   margin-left: -.05em // pedantic nudging so the larger text lines up a little nicer with text underneath
 .task_description, .task_time, .task_value_source
-  color: $gray-600
+  color: $gray-500
 .task_client
   margin-right: 5px
 .task_project
-  font-weight: 300
-  color: $gray-500
+  // font-weight: 300
+  color: $gray-600
   white-space: nowrap
 .task_value_currency
   font-size: 75%
@@ -165,10 +182,11 @@ h4
     &.modal_update // this icon looks off-centre, so let's correct that.
       padding: 9px 9px 8px 13px
 #floating_bar
-  display: none
+  // display: none
   text-align: center
-  background-color: $purple-700
-  color: $purple-100
+  background-color: $purple-900
+  color: $purple-300
+  border-bottom: 1px solid $purple-200
   padding: 20px 0px
   font-size: 150%
   z-index: 2
@@ -178,7 +196,7 @@ h4
   width: 100%
 .modal
   padding: 20px 20px 40px 20px
-  background-color: $purple-100
+  background-color: lighten($purple-100, 1%)
   a.close-modal
     top: 2.5px !important
     right: 2.5px !important
@@ -193,42 +211,50 @@ h4
     margin: 2px 9px
   .cancelBtn
     background-color: $gray-400
-.field
-  // padding-top: 10px
 label
   padding: 0 0 0 5px
   color: $gray-500
-  font-weight: 300
-input
+  font-weight: 400
+  text-transform: uppercase
+  font-size: 75%
+input, textarea
   width: 100%
-  padding: 0px 10px
-  border: 2px solid $purple-200
-  font-size: 125%
+  padding: 10px 10px
+  border: 1px solid $gray-400
   border-radius: 3px
-  height: 48px
+  height: 35px
   vertical-align: top
+  &:not([type=checkbox]):not([type=radio])
+    -webkit-appearance: none // remove shadow on mobile safari
+textarea
+  max-width: 100%
+  max-height: 500px
+  padding: 8px 10px
+  resize: none
+  overflow: hidden
 .easy-autocomplete 
   width:100% !important
 .easy-autocomplete input
   width: 100%
 select
-  border: 1px solid $gray-300
-  font-size: 120%
+  border: 1px solid $gray-400
+  font-size: 100%
   border-radius: 3px
   background-color: transparent
 button
-  background-color: $purple-600
+  background-color: $purple-100
   width: 100%
   vertical-align: middle
   padding: 10px 20px
-  height: 48px
+  height: 35px
   margin: 0
-  border: 0
+  border: 1px solid $purple-300
   border-radius: 3px
-  color: white
-  font-size: 120%
+  color: $purple-400
   &:hover
-    background-color: $purple-800
+    background-color: $purple-100
+    border: 1px solid $purple-400
+    color: $purple-500
     cursor: pointer
 .is-alert
   background-color: $red-600
@@ -248,24 +274,18 @@ button
     &.page_current
       color: $purple-500
 @media (max-width: 1200px)
-  body
-    font-size: .7em
-@media (max-width: 768px)
+
+@media (max-width: 1024px)
   .logo
     max-width: 120px
     margin: 0 auto
-  .sheet, .quick_add_form, .filters_form
-    //margin: 20px 20px 20px 20px
-    //padding: 20px 20px 20px 20px
-  .pagination
-    //margin: 20px 10px 20px 10px
   .table_col
     &.task_col_1
       width: 15%
     &.task_col_2
       width: 20%
     &.task_col_3
-      width: 45%
+      width: 55%
     .icon_svg
       a
         padding: 8px 9px 8px 9px
