--- a/template/css/style_bck.css
+++ b/template/css/style_bck.css
@@ -93,14 +93,6 @@ th:not([align]) {
 /** Purple **/
 /** Pink **/
 /*! bulma.io v0.9.0 | MIT License | github.com/jgthms/bulma */
-@-webkit-keyframes spinAround {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(359deg);
-  }
-}
 @keyframes spinAround {
   from {
     transform: rotate(0deg);
@@ -1753,8 +1745,6 @@ th:not([align]) {
   flex-basis: 0;
   flex-grow: 1;
   flex-shrink: 1;
-  min-height: -webkit-min-content;
-  min-height: -moz-min-content;
   min-height: min-content;
 }
 .tile.is-ancestor {
@@ -2222,12 +2212,6 @@ body {
   line-height: 1.6em;
   font-size: 0.75em;
   font-weight: 400;
-  margin-top: 80px;
-}
-
-textarea, input, button, select {
-  font-family: inherit;
-  font-size: inherit;
 }
 
 a {
@@ -2257,8 +2241,8 @@ img {
 
 h1, h2, h3, h4, .day_header {
   line-height: 1.6em;
-  font-weight: 300;
-  color: #cbd5e0;
+  font-weight: 200;
+  color: #f687b3;
 }
 
 ion-icon {
@@ -2292,9 +2276,8 @@ h4 {
 
 .day_header {
   width: 100%;
-  padding: 10px 0 10px 0px;
+  padding: 20px 0 10px 0px;
   cursor: pointer;
-  text-transform: uppercase;
 }
 
 .sheet > .day_header:nth-child(2) {
@@ -2304,18 +2287,12 @@ h4 {
 .box {
   background-color: #fff;
   border-radius: 2px;
-  outline: 1px solid #e9d8fd;
-}
-
-.box_alt {
-  background-color: #fdfaff;
-  outline: 1px solid #e9d8fd;
-  border-radius: 2px;
+  filter: drop-shadow(0px 0px 2px rgba(214, 188, 250, 0.6));
 }
 
 .sheet, .filters_form, .quick_add_form {
-  margin: 0px 0px 10px 0px;
-  padding: 30px 30px 30px 30px;
+  margin: 20px 0px 20px 0px;
+  padding: 20px 30px 20px 30px;
 }
 
 .table {
@@ -2329,7 +2306,7 @@ h4 {
 
 .table_col {
   display: table-cell;
-  border-top: 1px solid #e2e8f0;
+  border-top: 2px solid #e9d8fd;
   padding: 15px 5px 13px 5px;
   vertical-align: top;
 }
@@ -2381,7 +2358,7 @@ h4 {
 }
 
 .task_description, .task_time, .task_value_source {
-  color: #a0aec0;
+  color: #718096;
 }
 
 .task_client {
@@ -2389,7 +2366,8 @@ h4 {
 }
 
 .task_project {
-  color: #718096;
+  font-weight: 300;
+  color: #a0aec0;
   white-space: nowrap;
 }
 
@@ -2421,8 +2399,7 @@ h4 {
 .icon_svg img {
   width: 15px;
   height: auto;
-  -webkit-filter: invert(40%) sepia(50%) hue-rotate(226deg) saturate(900%);
-          filter: invert(40%) sepia(50%) hue-rotate(226deg) saturate(900%);
+  filter: invert(40%) sepia(50%) hue-rotate(226deg) saturate(900%);
 }
 .icon_svg a {
   transition: color 0.5s, border-radius 0.5s, background-color 0.5s;
@@ -2445,10 +2422,10 @@ h4 {
 }
 
 #floating_bar {
+  display: none;
   text-align: center;
-  background-color: #44337a;
-  color: #d6bcfa;
-  border-bottom: 1px solid #e9d8fd;
+  background-color: #6b46c1;
+  color: #faf5ff;
   padding: 20px 0px;
   font-size: 150%;
   z-index: 2;
@@ -2460,7 +2437,7 @@ h4 {
 
 .modal {
   padding: 20px 20px 40px 20px;
-  background-color: #fdfaff;
+  background-color: #faf5ff;
 }
 .modal a.close-modal {
   top: 2.5px !important;
@@ -2485,30 +2462,21 @@ h4 {
 
 label {
   padding: 0 0 0 5px;
-  color: #a0aec0;
-  font-weight: 400;
-  text-transform: uppercase;
-  font-size: 75%;
+  color: #2d3748;
+  font-weight: 300;
 }
 
 input, textarea {
   width: 100%;
-  padding: 10px 10px;
+  padding: 0px 10px;
   border: 1px solid #cbd5e0;
+  font-size: 125%;
   border-radius: 3px;
-  height: 35px;
+  height: 45px;
   vertical-align: top;
 }
 input:not([type=checkbox]):not([type=radio]), textarea:not([type=checkbox]):not([type=radio]) {
   -webkit-appearance: none;
-}
-
-textarea {
-  max-width: 100%;
-  max-height: 500px;
-  padding: 8px 10px;
-  resize: none;
-  overflow: hidden;
 }
 
 .easy-autocomplete {
@@ -2521,26 +2489,25 @@ textarea {
 
 select {
   border: 1px solid #cbd5e0;
-  font-size: 100%;
+  font-size: 120%;
   border-radius: 3px;
   background-color: transparent;
 }
 
 button {
-  background-color: #faf5ff;
+  background-color: #b794f4;
   width: 100%;
   vertical-align: middle;
   padding: 10px 20px;
-  height: 35px;
+  height: 45px;
   margin: 0;
-  border: 1px solid #d6bcfa;
+  border: 0;
   border-radius: 3px;
-  color: #b794f4;
+  color: white;
+  font-size: 120%;
 }
 button:hover {
-  background-color: #faf5ff;
-  border: 1px solid #b794f4;
-  color: #9f7aea;
+  background-color: #d6bcfa;
   cursor: pointer;
 }
 
@@ -2562,14 +2529,18 @@ button:hover {
 .pagination a {
   padding: 10px 15px 9px 15px;
   background-color: #fff;
-  -webkit-filter: drop-shadow(0px 0px 2px rgba(214, 188, 250, 0.6));
-          filter: drop-shadow(0px 0px 2px rgba(214, 188, 250, 0.6));
+  filter: drop-shadow(0px 0px 2px rgba(214, 188, 250, 0.6));
 }
 .pagination a.page_current {
   color: #9f7aea;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1200px) {
+  body {
+    font-size: 0.7em;
+  }
+}
+@media (max-width: 768px) {
   .logo {
     max-width: 120px;
     margin: 0 auto;
@@ -2582,7 +2553,7 @@ button:hover {
     width: 20%;
   }
   .table_col.task_col_3 {
-    width: 55%;
+    width: 45%;
   }
   .table_col .icon_svg a {
     padding: 8px 9px 8px 9px;
