--- a/template/css/style.css
+++ b/template/css/style.css
@@ -2208,7 +2208,7 @@ th:not([align]) {
 
 /* Main styles */
 html {
-  background: #e2e8f0;
+  background: #edf2f7;
   padding: 0;
   margin: 0;
   overflow: -moz-scrollbars-vertical;
@@ -2257,7 +2257,7 @@ h1, h2, .day_header {
 }
 
 h1, .day_header {
-  font-size: 2.5rem;
+  font-size: 2.25rem;
   margin: 1.5rem 0 1rem 0;
 }
 
@@ -2309,68 +2309,66 @@ h2 {
 }
 
 .filters_form {
-  padding: 0px 0px 40px 0px;
-  margin: 20px 0px 50px 0px;
-  border-bottom: 1px solid #cbd5e0;
-}
-
-.table {
-  display: table;
-  width: 100%;
+  padding: 0px 0px 30px 0px;
+  margin: 10px 0px 40px 0px;
+  border-bottom: 1px solid #e2e8f0;
 }
 
 .table_row {
-  display: table-row;
+  display: flex;
+  flex-direction: row;
+  flex-grow: 1;
 }
 
 .table_col {
-  display: table-cell;
   border-top: 1px solid #e2e8f0;
+  border-: 1px solid #edf2f7;
   padding: 15px 5px 13px 5px;
   vertical-align: top;
 }
-.table_col.task_col_1 {
-  width: 100px;
+.table_col.task_col_0 {
+  width: 25px;
 }
-.table_col.task_col_2 {
-  width: 200px;
-}
-.table_col.task_col_3 {
-  width: auto;
-}
-.table_col.task_col_4 {
-  width: 160px;
-}
-.table_col.task_col_graph {
-  width: 10px;
-}
-.table_col.task_col_graph div {
-  width: 18px;
-  height: 18px;
+.table_col.task_col_0 div {
+  width: 100%;
+  height: 1.75rem;
   border-radius: 50px;
   margin-left: 0px;
   margin-right: 5px;
+  margin-top: -5px;
   border: 2px solid white;
   vertical-align: baseline;
 }
-.table_col.task_col_graph div.heat_0 {
+.table_col.task_col_0 div.heat_0 {
   background-color: #caefff;
 }
-.table_col.task_col_graph div.heat_1 {
+.table_col.task_col_0 div.heat_1 {
   background-color: #e9ef9c;
 }
-.table_col.task_col_graph div.heat_2 {
+.table_col.task_col_0 div.heat_2 {
   background-color: #ffc33b;
 }
-.table_col.task_col_graph div.heat_3 {
+.table_col.task_col_0 div.heat_3 {
   background-color: #ff6a38;
 }
-.table_col.task_col_graph div.heat_4 {
+.table_col.task_col_0 div.heat_4 {
   background-color: #ff1d16;
+}
+.table_col.task_col_1 {
+  width: 200px;
+}
+.table_col.task_col_2 {
+  width: 300px;
+}
+.table_col.task_col_3 {
+  width: 100%;
+}
+.table_col.task_col_4 {
+  width: 260px;
 }
 
 .task_duration, .task_project, .task_value, .task_client {
-  font-size: 1.25rem;
+  font-size: 1.1rem;
   font-weight: 500;
   margin-left: -0.05em;
 }
@@ -2410,11 +2408,12 @@ h2 {
 }
 
 .action_icons {
-  text-align: right;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .icon_svg img {
-  width: 15px;
+  width: 12px;
   height: auto;
   -webkit-filter: invert(40%) sepia(50%) hue-rotate(226deg) saturate(900%);
           filter: invert(40%) sepia(50%) hue-rotate(226deg) saturate(900%);
@@ -2424,7 +2423,7 @@ h2 {
   background: #faf5ff;
   vertical-align: middle;
   align: center;
-  padding: 10px 11px 7px 11px;
+  padding: 5px 6px 4px 6px;
   border-radius: 5px;
   line-height: 1;
   display: inline-block;
@@ -2436,7 +2435,7 @@ h2 {
   border-radius: 10px;
 }
 .icon_svg a.modal_update {
-  padding: 9px 9px 8px 13px;
+  padding: 5px 5px 4px 7px;
 }
 
 ion-icon {
@@ -2605,33 +2604,35 @@ button:hover, button:focus {
   .task_project {
     white-space: normal;
   }
-
-  .table_col.task_col_1 {
-    width: 15%;
-  }
-  .table_col.task_col_2 {
-    width: 20%;
-  }
-  .table_col.task_col_3 {
-    width: 50%;
-  }
 }
-@media (max-width: 900px) {
-  .logo {
-    max-width: 120px;
-    margin: 0 auto;
+@media (max-width: 800px) {
+  body {
+    font-size: 0.7rem;
+    line-height: 1.4;
   }
 
-  .table_col.task_col_1 {
-    width: 15%;
+  .container {
+    padding: 0 5px;
   }
-  .table_col.task_col_2 {
-    width: 20%;
+
+  .sheet, .quick_add_form {
+    margin: 0px 0px 10px 0px;
+    padding: 15px 10px 15px 10px;
   }
-  .table_col.task_col_3 {
-    width: 45%;
+
+  .quick_add_form {
+    padding: 15px 10px 15px 10px;
   }
-  .table_col .icon_svg a {
-    padding: 5px 6px 5px 6px;
+
+  .filters_form {
+    padding: 0px 0px 20px 0px;
+    margin: 10px 0px 20px 0px;
+  }
+
+  .action_icons {
+    max-width: 60px;
+    max-height: 60px;
+    flex-wrap: wrap;
+    gap: 1px;
   }
 }
